k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsl-app
  namespace: production
  labels:
    app: fsl-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
      - name: fsl-app
        image: lucascdourado/fsl:latest
        ports:
        - containerPort: 8080
