k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  selector:
    app: fsl-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
