k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsl-ingress
  namespace: production
  labels:
    app: fsl-app
spec:
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fsl-service
            port:
              number: 8080
